deployment/k8s-deployment/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  $CI_PROJECT_NAME
  namespace: $NAMESPACE
  labels:
    name:  $CI_PROJECT_NAME
    app: $CI_PROJECT_NAME
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME
  template:
    metadata:
      labels:
        name:  $CI_PROJECT_NAME
        app: $CI_PROJECT_NAME
    spec:
      containers:
      - image:  nexus.api-connect.io/$IMAGE_NAME_BUILD
        name:  $CI_PROJECT_NAME
        resources:
          requests:
             cpu: 500m
             memory: 1000Mi
          limits:
              cpu: 1500m
              memory: 1500Mi
        imagePullPolicy: Always
      imagePullSecrets:
      - name: nexus
      restartPolicy: Always
      
---
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
  namespace: $NAMESPACE
spec:
  ports:
    - name: port
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: grpc
      port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    app: $CI_PROJECT_NAME
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $CI_PROJECT_NAME
  annotations:
    haproxy.org/path-rewrite: /$CI_PROJECT_NAME/(.*) /\1
  labels:
    {}
  namespace: $NAMESPACE

spec:
  ingressClassName: haproxy
  rules:
    - host: core-cloudops-dev.api-connect.io
      http:
        paths:
          - backend:
              service:
                name: $CI_PROJECT_NAME
                port:
                  number: 8000
            path: /$CI_PROJECT_NAME/
            pathType: Prefix
    - host: mobifone-partner-dev.api-connect.io
      http:
        paths:
          - backend:
              service:
                name: $CI_PROJECT_NAME
                port:
                  number: 8000
            path: /api/
            pathType: Prefix
